[package]
publish = false
name = "rs-libinjection-bench"
version = "0.0.1"

[lib]
bench = false

[[bench]]
name = "rs-libinjection"
harness = false
path = "src/bench.rs"

[dependencies]
rs-libinjection = { version = "*", path = ".." }
testutil = { version = "*", path = "../testutil" }

criterion = "0.4.0"
